[gd_scene load_steps=8 format=2]

[ext_resource path="res://enemy.gd" type="Script" id=1]
[ext_resource path="res://ships/Faction10-Spaceships-by-MillionthVector/destroyer.png" type="Texture" id=2]
[ext_resource path="res://objects/sparkling-fireball-small.png" type="Texture" id=3]

[sub_resource type="Animation" id=5]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CanvasItemMaterial" id=2]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 7
particles_anim_loop = false

[sub_resource type="Curve" id=3]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0.0079561, 200 ), 0.0, 0.0, 0, 0, Vector2( 0.501697, -7.04001 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 98.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="enemy" type="Area2D"]
position = Vector2( 832.487, -734.548 )
collision_layer = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 5 )

[node name="destroyer" type="Sprite" parent="."]
position = Vector2( -0.252319, 12.4932 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( -0.252014, 12.494 )
polygon = PoolVector2Array( -131, -168.4, -131, -160.7, -115, -133.5, 3, -119.9, 3, -113.6, 25.7, -86, 30.3, -86, 136, -93.8, 136, -83.2, 138.8, -72, 231, -29.4, 231, -22.5, 234.4, 3, 230, 3, 230, 5, 235.2, 31, 223.6, 31, 168.5, 49.1, 141, 67.3, 141, 68.2, 134.8, 93, 115.6, 93, 26.4, 86.4, 1, 120, -6.60001, 120, -114.2, 133.2, -135.3, 169, -152.2, 169, -202, 172.8, -202, 162.9, -206, 152, -209.2, 152, -239, 144.6, -239, 126, -233, 126, -204.5, 113.8, -173.6, 54.3, -232.9, 40.8, -230.9, 23, -224.4, 23, -198.4, 3, -140, 3, -140, -2.10001, -205, -3.2, -205, -9, -232, -29, -232, -45.7, -171.2, -54.2, -179.2, -76.4, -201, -80.8, -201, -90.9, -204.5, -111, -207.7, -111, -239, -129.5, -239, -152, -206.5, -152, -202, -162.9, -202, -172.6 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
emitting = false
amount = 800
lifetime = 1.07
one_shot = true
fixed_fps = 50
texture = ExtResource( 3 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 220.51
linear_accel_curve = SubResource( 3 )
anim_speed = 1.0

[node name="Particles2D" type="Particles2D" parent="."]
amount = 800
lifetime = 82.49
fract_delta = false
draw_order = 1
process_material = SubResource( 4 )
texture = ExtResource( 3 )
[connection signal="area_entered" from="." to="." method="_on_enemy_area_entered"]
[connection signal="area_shape_entered" from="." to="." method="_on_enemy_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_enemy_body_entered"]
